[tool.poetry]
name = "gedi-tutorials"
version = "0.1.0"
description = ""
authors = ["Seth Docherty <sddocherty@gmail.com>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.11"
contextily = "^1.3.0"
folium = "^0.14.0"
h5py = "^3.8.0"
harmony-py = "^0.4.9"
IPython = "^8.12.2"
matplotlib = "^3.7.1"
matplotlib_scalebar = "^0.8.1"
netCDF4 = "^1.6.4"
numpy = "^1.24.3"
owslib = "^0.29.2"
pandas = "^2.0.2"
pydap = "^3.4.1"
rasterio = "^1.3.7"
rasterstats = "^0.19.0"
requests = "^2.31.0"
s3fs = "^2024.9.0"
seaborn = "^0.12.2"
scipy = "^1.10.1"
shapely = "^2.0.1"
tabulate = "^0.9.0"
ipykernel = "^6.29.3"
ipfs-stac = "^0.1.12"
ipfsspec = "^0.5.2"
geopandas = "0.14.3"
fiona = "1.9.6" # https://github.com/Toblerity/Fiona/issues/1440#issuecomment-2329694317
notebook = "^7.2.2"

[tool.poetry.scripts]
edit-config = "scripts.poetry_cmds:modify_config_file"
print-default = "scripts.poetry_cmds:print_default_config"
reset-config = "scripts.poetry_cmds:reset_config_file"
check-config = "scripts.poetry_cmds:check_config"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
